# RCJ2024sim

./: .gitignore  README.md
robot_controller/: CMakeLists.txt  Dockerfile  MyAwesomeRobot.json  RobotInstance.cpp  RobotInstance.hpp  constants.h  feature.txt  helper.cpp  helper.hpp  knn.yml  label.txt  map.cpp  map.h  mapping.cpp  mapping.h  navigation.cpp  navigation.h  new bot.json  robot_controller.cpp  runner.sh
